ITL: Add some missing arguments to ssl_cert

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -397,6 +397,10 @@ object CheckCommand "ssl_cert" {
 			value = "$ssl_cert_cn$"
 			description = "Pattern to match the CN of the certificate"
 		}
+		"--altnames" = {
+			set_if = "$ssl_cert_altnames$"
+			description = "Matches the pattern specified in -n with alternate"
+		}
 		"-i" = {
 			value = "$ssl_cert_issuer$"
 			description = "Pattern to match the issuer of the certificate"
@@ -417,6 +421,10 @@ object CheckCommand "ssl_cert" {
 			value = "$ssl_cert_serial$"
 			description = "Pattern to match the serial number"
 		}
+		"-A" = {
+			set_if = "$ssl_cert_noauth$"
+			description = "Ignore authority warnings (expiration only)"
+		}
 		"-s" = {
 			set_if = "$ssl_cert_selfsigned$"
 			description = "Allow self-signed certificate"
@@ -427,7 +435,7 @@ object CheckCommand "ssl_cert" {
 		}
 		"-t" = {
 			value = "$ssl_cert_timeout$"
-			description = "Seconds before connection times out (default: 10)"
+			description = "Seconds before connection times out (default: 15)"
 		}
 		"-P" = {
 			value = "$ssl_cert_protocol$"
@@ -440,6 +448,14 @@ object CheckCommand "ssl_cert" {
 		"--clientpass" = {
 			value = "$ssl_cert_clientpass$"
 			description = "Set passphrase for client certificate"
+		}
+		"-L" = {
+			value = "$ssl_cert_ssllabs$"
+			description = "SSL Labs assestment"
+		}
+		"--ignore-ssl-labs-cache" = {
+			set_if = "$ssl_cert_ssllabs_nocache$
+			description = "Forces a new check by SSL Labs"
 		}
 		"-r" = {
 			value = "$ssl_cert_rootssl_cert$"
@@ -544,6 +560,5 @@ object CheckCommand "ssl_cert" {
 
 	vars.ssl_cert_address = "$check_address$"
 	vars.ssl_cert_port = 443
-	vars.ssl_cert_timeout = 10
 }
 
