ITL: Fix missing double quote in ssl-cert CheckCommand
refs #5236

--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -454,7 +454,7 @@ object CheckCommand "ssl_cert" {
 			description = "SSL Labs assestment"
 		}
 		"--ignore-ssl-labs-cache" = {
-			set_if = "$ssl_cert_ssllabs_nocache$
+			set_if = "$ssl_cert_ssllabs_nocache$"
 			description = "Forces a new check by SSL Labs"
 		}
 		"-r" = {
