Add check_mailq -d argument for mailq_configdir
Fixes #5254

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2051,6 +2051,10 @@ object CheckCommand "mailq" {
 			set_if = "$mailq_sudo$"
 			description = "Use sudo for mailq command"
 		}
+		"-d" = {
+			value = "$mailq_configdir$"
+			description = "Config file or directory"
+		}
 	}
 }
 
