--- a/etc/icinga2/features-available/logstash.conf
+++ b/etc/icinga2/features-available/logstash.conf
@@ -8,5 +8,6 @@ library "perfdata"
 object LogstashWriter "logstash" {
   //host = "127.0.0.1"
   //port = 9201
-  //socket_type = "udp"
+  /* default is tcp */
+  //defaultProtocol = true
 }
