Fix verbose mode in notifications scripts
Otherwise it just spams the syslog on frequent notifications

refs #5170

--- a/etc/icinga2/conf.d/notifications.conf
+++ b/etc/icinga2/conf.d/notifications.conf
@@ -15,7 +15,7 @@ apply Notification "mail-icingaadmin" to Host {
 
   //interval = 2h
 
-  vars.notification_logtosyslog = true
+  //vars.notification_logtosyslog = true
 
   assign where host.vars.notification.mail
 }
@@ -27,7 +27,7 @@ apply Notification "mail-icingaadmin" to Service {
 
   //interval = 2h
 
-  vars.notification_logtosyslog = true
+  //vars.notification_logtosyslog = true
 
   assign where host.vars.notification.mail
 }
