DEPRECATE icinga2-classicui-config package and files
refs #5102

--- a/etc/icinga/cgi.cfg
+++ b/etc/icinga/cgi.cfg
@@ -2,6 +2,10 @@
 #
 # requires icinga-gui package
 # check http://docs.icinga.com for option details
+#
+# This has been DEPRECATED and will be removed in future releases.
+# You can manually configure the Classic UI by keeping a backup of this file.
+
 standalone_installation=1
 physical_html_path=/usr/share/icinga
 url_html_path=/icinga
