command-plugins.conf: make "by_ssh" use host ssh_port by default

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1696,6 +1696,7 @@ object CheckCommand "by_ssh" {
 	}
 
 	vars.by_ssh_address = "$check_address$"
+	vars.by_ssh_port = "$ssh_port$"
 	vars.by_ssh_quiet = false
 	vars.check_ipv4 = "$by_ssh_ipv4$"
 	vars.check_ipv6 = "$by_ssh_ipv6$"
