--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -28,3 +28,8 @@ install(
   FILES ${DOCSRCS}
   DESTINATION ${CMAKE_INSTALL_DOCDIR}/markdown
 )
+
+install(
+  DIRECTORY images
+  DESTINATION ${CMAKE_INSTALL_DOCDIR}/markdown
+)
