notification_type mandatory
Make $notification_type$ mandatory in mail-service-notification, too.

--- a/etc/icinga2/conf.d/commands.conf
+++ b/etc/icinga2/conf.d/commands.conf
@@ -100,7 +100,10 @@ object NotificationCommand "mail-service-notification" {
       required = true
       value = "$notification_servicestate$"
     }
-    "-t" = "$notification_type$"
+    "-t" = {
+      required = true
+      value = "$notification_type$"
+    }
     "-u" = {
       required = true
       value = "$notification_servicedisplayname$"
