Add ip4-or-ipv6 import to logstash ITL command

--- a/itl/plugins-contrib.d/logmanagement.conf
+++ b/itl/plugins-contrib.d/logmanagement.conf
@@ -18,6 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "logstash" {
+	import "ipv4-or-ipv6"
 	command = [ PluginContribDir + "/check_logstash" ]
 
 	arguments = {
