Description modified for command plugins

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -25,35 +25,53 @@ template CheckCommand "snmp-manubulon-command" {
 	import "ipv4-or-ipv6"
 
 	arguments = {
-		"-H" = "$snmp_address$"
+		"-H" = {
+			value = "$snmp_address$"
+			description = "Name or IP address of host to check"
+		}
 		"-C" = {
 			set_if = "$snmp_nocrypt$"
 			value = "$snmp_community$"
+			description = "Community name for the host's SNMP agent (implies v1 protocol)"
 		}
-		"-p" = "$snmp_port$"
+		"-p" = {
+			value = "$snmp_port$"
+			description = "SNMP port (Default 161)"
+		}
 		"-2" = {
 			set_if = "$snmp_v2$"
+			description = "Use snmp v2c"
 		}
 		"-l" = {
 			set_if = "$snmp_v3$"
 			value = "$snmp_login$"
+			description = "Login and auth password for snmpv3 authentication"
 		}
 		"-x" = {
 			set_if = "$snmp_v3$"
 			value = "$snmp_password$"
+			description = "Priv password"
 		}
 		"-L" = {
 			set_if = "$snmp_v3_use_authprotocol$"
 			value = "$snmp_authprotocol$"
+			description = "<authproto>,<privproto> - <Authentication protocol (md5|sha : default md5)>,<Priv protocole (des|aes : default des)>"
 		}
 		"-X" = {
 			set_if = "$snmp_v3_use_privpass$"
 			value = "$snmp_privpass$"
+			description = "Priv password for snmpv3 (AuthPriv protocol)"
 		}
-
-		"-w" = "$snmp_warn$"
-		"-c" = "$snmp_crit$"
-		"-t" = "$snmp_timeout$"
+		"-w" = {
+			value = "$snmp_warn$"
+		}
+		"-c" = {
+			value = "$snmp_crit$"
+		}
+		"-t" = {
+			value = "$snmp_timeout$"
+			description = "Timeout for SNMP in seconds (Default: 5)"
+		}
 	}
 
 	vars.snmp_address = "$check_address$"
@@ -80,9 +98,13 @@ object CheckCommand "snmp-load" {
 	command = [ ManubulonPluginDir + "/check_snmp_load.pl" ]
 
 	arguments += {
-		"-T" = "$snmp_load_type$"
+		"-T" = {
+			value = "$snmp_load_type$"
+			description = "CPU check"
+		}
 		"-f" = {
 			set_if = "$snmp_perf$"
+			description = "Perfparse compatible output"
 		}
 	}
 
@@ -108,6 +130,7 @@ object CheckCommand "snmp-memory" {
 	arguments += {
 		"-f" = {
 			set_if = "$snmp_perf$"
+			description = "Performance data output"
 		}
 		"-I" = {
 			set_if = "$snmp_is_cisco$"
@@ -136,9 +159,13 @@ object CheckCommand "snmp-storage" {
 	command = [ ManubulonPluginDir + "/check_snmp_storage.pl" ]
 
 	arguments += {
-		"-m" = "$snmp_storage_name$"
+		"-m" = {
+			value = "$snmp_storage_name$"
+			description = "Name in description OID (can be mounpoints '/home' or 'Swap Space'...)"
+		}
 		"-f" = {
 			set_if = "$snmp_perf$"
+			description = "Perfparse compatible output"
 		}
 	}
 
@@ -160,38 +187,57 @@ object CheckCommand "snmp-interface" {
 	command = [ ManubulonPluginDir + "/check_snmp_int.pl" ]
 
 	arguments += {
-		"-n" = "$snmp_interface$"
+		"-n" = {
+			value = "$snmp_interface$"
+			description = "Name in description OID (eth0, ppp0 ...). This is treated as a regexp : -n eth will match eth0,eth1,..."
+		}
 		"-k" = {
 			set_if = "$snmp_interface_perf$"
+			description = "Check the input/ouput bandwidth of the interface"
 		}
-		"--label" = "$snmp_interface_label$"
+		"--label" = {
+			value = "$snmp_interface_label$"
+			description = "Add label before speed in output : in=, out=, errors-out=, etc..."
+		}
 		"-Y" = {
 			set_if = "$snmp_interface_bits_bytes$"
+			description = "Output performance data in bits/s or Bytes/s"
 		}
 		"-y" = {
 			set_if = "$snmp_interface_percent$"
+			description = "Output performance data in % of max speed"
 		}
 		"-B" = {
 			set_if = "$snmp_interface_kbits$"
+			description = "Make the warning and critical levels in K|M|G Bits/s instead of K|M|G Bytes/s"
 		}
 		"-M" = {
 			set_if = "$snmp_interface_megabytes$"
+			description = "Make the warning and critical levels in Mbps"
 		}
 		"--64bits" = {
 			set_if = "$snmp_interface_64bit$"
+			description = "Use 64 bits counters instead of the standard counters when checking bandwidth & performance data for interface >= 1Gbps"
 		}
 		"-e" = {
 			set_if = "$snmp_interface_errors$"
+			description = "Add error & discard to Perfparse output"
 		}
 		"-i" = {
 			set_if = "$snmp_interface_inverse$"
+			description = "Make critical when up"
 		}
 		"-r" = {
 			set_if = "$snmp_interface_noregexp$"
+			description = "Do not use regexp to match NAME in description OID"
 		}
-		"-d" = "$snmp_interface_delta$"
+		"-d" = {
+			value = "$snmp_interface_delta$"
+			description = "Make an average of <delta> seconds (default 300=5min)"
+		}
 		"-u" = {
 			set_if = "$snmp_interface_warncrit_percent$"
+			description = "Make the warning and critical levels in % of reported interface speed"
 		}
 		"-N" = {
 			set_if = "$snmp_interface_ifname$"
@@ -201,6 +247,7 @@ object CheckCommand "snmp-interface" {
 		}
 		"-f" = {
 			set_if = "$snmp_perf$"
+			description = "Perfparse compatible output (no output when interface is down)"
 		}
 	}
 
@@ -235,24 +282,26 @@ object CheckCommand "snmp-process" {
 
 	arguments += {
 		"-n" = {
-			description = "Regex service name eg. ^apache2$"
 			value = "$snmp_process_name$"
+			description = "Regex service name eg. ^apache2$"
 		}
 		"-F" = {
 			set_if = "$snmp_perf$"
+			description = "Add performance output (outputs : memory_usage, num_process, cpu_usage)"
 		}
 		"-A" = {
 			set_if = "$snmp_process_use_params$"
+			description = "Add parameters to select processes (ex : 'named.*-t /var/named/chroot' will only select named process with this parameter)"
 		}
 		"-m" = {
-			description = "Checks memory usage. Values warning and critical in Mb eg. 512,1024"
 			set_if = "$snmp_process_mem_usage$"
 			value = "$snmp_process_mem_threshold$"
+			description = "Checks memory usage. Values warning and critical in Mb eg. 512,1024"
 		}
 		"-u" = {
-			description = "Checks CPU usage. Values warning and critical in % (value can be > 100% : 100%=1 CPU) eg. 15,50"
 			set_if = "$snmp_process_cpu_usage$"
 			value = "$snmp_process_cpu_threshold$"
+			description = "Checks CPU usage. Values warning and critical in % (value can be > 100% : 100%=1 CPU) eg. 15,50"
 		}
 	}
 
