--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -747,7 +747,7 @@ object CheckCommand "smtp" {
 		"-P" = {
 			value = "$smtp_authpass$"
 			description = "SMTP AUTH password"
-			}
+		}
 		"-q" = {
 			value = "$smtp_ignore_quit$"
 			description = "Ignore failure when sending QUIT command to server"
@@ -1382,138 +1382,113 @@ object CheckCommand "disk" {
 			required = true
 			order = -3
 		}
-
 		"-c" = {
 			value = "$disk_cfree$"
 			description = "Exit with CRITICAL status if less than INTEGER units of disk are free or Exit with CRITCAL status if less than PERCENT of disk space is free"
 			required = true
 			order = -3
 		}
-
 		"-W" = {
 			value = "$disk_inode_wfree$"
 			description = "Exit with WARNING status if less than PERCENT of inode space is free"
 		}
-
 		"-K" = {
 			value = "$disk_inode_cfree$"
 			description = "Exit with CRITICAL status if less than PERCENT of inode space is free"
 		}
-
 		"-p" = {
 			value = "$disk_partitions$"
 			description = "Path or partition (may be repeated)"
 			repeat_key = true
 			order = 1
 		}
-
 		"-p_old" = {
 			key = "-p"
 			value = "$disk_partition$"
 			order = 1
 		}
-
 		"-x" = {
 			value = "$disk_partitions_excluded$"
 			description = "Ignore device (only works if -p unspecified)"
 		}
-
 		"-x_old" = {
 			key = "-x"
 			value = "$disk_partition_excluded$"
 		}
-
 		"-C" = {
 			set_if = "$disk_clear$"
 			description = "Clear thresholds"
 		}
-
 		"-E" = {
 			set_if = "$disk_exact_match$"
 			description = "For paths or partitions specified with -p, only check for exact paths"
 		}
-
 		"-e" = {
 			set_if = "$disk_errors_only$"
 			description = "Display only devices/mountpoints with errors"
 		}
-
 		"-f" = {
 			set_if = "$disk_ignore_reserved$"
 			description = "Don't account root-reserved blocks into freespace in perfdata"
 		}
-
 		"-g" = {
 			value = "$disk_group$"
 			description = "Group paths. Thresholds apply to (free-)space of all partitions together"
 		}
-
 		"-k" = {
 			set_if = "$disk_kilobytes$"
 			description = "Same as --units kB"
 		}
-
 		"-l" = {
 			set_if = "$disk_local$"
 			description = " Only check local filesystems"
 		}
-
 		"-L" = {
 			set_if = "$disk_stat_remote_fs$"
 			description = "Only check local filesystems against thresholds. Yet call stat on remote filesystems to test if they are accessible (e.g. to detect Stale NFS Handles)"
 		}
-
 		"-M" = {
 			set_if = "$disk_mountpoint$"
 			description = "Display the mountpoint instead of the partition"
 		}
-
 		"-m" = {
 			set_if = "$disk_megabytes$"
 			description = "Same as --units MB"
 		}
-
 		"-A" = {
 			set_if = "$disk_all$"
 			description = "Explicitly select all paths. This is equivalent to -R .*"
 		}
-
 		"-R" = {
 			value = "$disk_eregi_path$"
 			description = "Case insensitive regular expression for path/partition (may be repeated)"
 			repeat_key = true
 		}
-
 		"-r" = {
 			value = "$disk_ereg_path$"
 			description = "Regular expression for path or partition (may be repeated)"
 			repeat_key = true
 		}
-
 		"-I" = {
 			value = "$disk_ignore_eregi_path$"
 			description = "Regular expression to ignore selected path/partition (case insensitive) (may be repeated)"
 			repeat_key = true
 			order = 2
 		}
-
 		"-i" = {
 			value = "$disk_ignore_ereg_path$"
 			description = "Regular expression to ignore selected path or partition (may be repeated)"
 			repeat_key = true
 			order = 2
 		}
-
 		"-t" = {
 			value = "$disk_timeout$"
 			description = "Seconds before connection times out (default: 10)"
 		}
-
 		"-u" = {
 			value = "$disk_units$"
 			description = "Choose bytes, kB, MB, GB, TB (default: MB)"
 		}
-
 		"-X" = {
 			value = "$disk_exclude_type$"
 			description = "Ignore all filesystems of indicated type (may be repeated)"
@@ -2295,19 +2270,17 @@ object CheckCommand "nrpe" {
 	arguments = {
 		"-H" = {
 			value = "$nrpe_address$"
-			description = ""
+			description = "The address of the host running the NRPE daemon"
 		}
 		"-p" = {
 			value = "$nrpe_port$"
-			description = ""
 		}
 		"-c" = {
 			value = "$nrpe_command$"
-			description = ""
 		}
 		"-n" = {
 			set_if = "$nrpe_no_ssl$"
-			description = "Do not use SSL."
+			description = "Do not use SSL"
 		}
 		"-u" = {
 			set_if = "$nrpe_timeout_unknown$"
@@ -2315,7 +2288,7 @@ object CheckCommand "nrpe" {
 		}
 		"-t" = {
 			value = "$nrpe_timeout$"
-			description = ""
+			description = "<interval>:<state> = <Number of seconds before connection times out>:<Check state to exit with in the event of a timeout (default=CRITICAL)>"
 		}
 		"-a" = {
 			value = "$nrpe_arguments$"
@@ -2792,13 +2765,26 @@ object CheckCommand "negate" {
 	command = [ PluginDir + "/negate" ]
 
 	arguments = {
-		"-t" = "$negate_timeout$"
-		"-T" = "$negate_timeout_result$"
-		"-o" = "$negate_ok$"
-		"-w" = "$negate_warning$"
-		"-c" = "$negate_critical$"
+		"-t" = {
+			value = "$negate_timeout$"
+			description = "Seconds before plugin times out (default: 11)"
+		}
+		"-T" = {
+			value = "$negate_timeout_result$"
+			description = "Custom result on Negate timeouts"
+		}
+		"-o" = {
+			value = "$negate_ok$"
+		}
+		"-w" = {
+			value = "$negate_warning$"
+		}
+		"-c" = {
+			value = "$negate_critical$"
+		}
 		"-s" = {
 			set_if = "$negate_substitute$"
+			description = "Substitute output text as well. Will only substitute text in CAPITALS"
 		}
 		"--wrapped-plugin" = {
 			value = {{
@@ -2971,16 +2957,46 @@ object CheckCommand "mysql_query" {
 	command = [ PluginDir + "/check_mysql_query" ]
 
 	arguments = {
-		"-H" = "$mysql_query_hostname$"
-		"-P" = "$mysql_query_port$"
-		"-u" = "$mysql_query_username$"
-		"-p" = "$mysql_query_password$"
-		"-d" = "$mysql_query_database$"
-		"-f" = "$mysql_query_file$"
-		"-g" = "$mysql_query_group$"
-		"-q" = "$mysql_query_execute$"
-		"-w" = "$mysql_query_warning$"
-		"-c" = "$mysql_query_critical$"
+		"-H" = {
+			value = "$mysql_query_hostname$"
+			description = "Host name, IP Address, or unix socket (must be an absolute path)"
+		}
+		"-P" = {
+			value = "$mysql_query_port$"
+			description = "Port number (default: 3306)"
+		}
+		"-u" = {
+			value = "$mysql_query_username$"
+			description = "Username to login with"
+		}
+		"-p" = {
+			value = "$mysql_query_password$"
+			description = "Password to login with"
+		}
+		"-d" = {
+			value = "$mysql_query_database$"
+			description = "Database to check"
+		}
+		"-f" = {
+			value = "$mysql_query_file$"
+			description = "Read from the specified client options file"
+		}
+		"-g" = {
+			value = "$mysql_query_group$"
+			description = "Use a client options group"
+		}
+		"-q" = {
+			value = "$mysql_query_execute$"
+			description = "SQL query to run. Only first column in first row will be read"
+		}
+		"-w" = {
+			value = "$mysql_query_warning$"
+			description = "Warning range (format: start:end). Alert if outside this range"
+		}
+		"-c" = {
+			value = "$mysql_query_critical$"
+			description = "Critical range"
+		}
 	}
 
 	vars.mysql_query_hostname = "$check_address$"
@@ -2994,12 +3010,25 @@ object CheckCommand "radius" {
 	]
 
 	arguments = {
-		"-H" = "$radius_address$",
-		"-F" = "$radius_config_file$",
-		"-u" = "$radius_username$",
-		"-p" = "$radius_password$",
+		"-H" = {
+			value = "$radius_address$",
+			description = "Host name, IP Address, or unix socket (must be an absolute path)"
+		}
+		"-F" = {
+			value = "$radius_config_file$",
+			description = "Configuration file"
+		}
+		"-u" = {
+			value = "$radius_username$",
+			description = "The user to authenticate"
+		}
+		"-p" = {
+			value = "$radius_password$",
+			description = "Password for authentication"
+		}
 		"-P" = {
 			value = "$radius_port$",
+			description = "Port number (default: 1645)"
 		},
 		"-n" = {
 			value = "$radius_nas_id$",
