Fix description for checkcommand sections

--- a/itl/command-nscp-local.conf
+++ b/itl/command-nscp-local.conf
@@ -25,8 +25,14 @@ object CheckCommand "nscp-local" {
 	command = [ NscpPath + "\\nscp.exe", "client" ]
 
 	arguments = {
-		"--log" = "$nscp_log_level$"
-		"--load-all" = { set_if ="$nscp_load_all$" }
+		"--log" = {
+			value = "$nscp_log_level$"
+			description = "The log level to use"
+		}
+		"--load-all" = {
+			set_if ="$nscp_load_all$"
+			description = "Load all plugins (currently only used with generate)"
+		}
 		"--module" = {
 			value = "$nscp_modules$"
 			description = "Specify which NSClient++ modules are required. 'nscp client' just needs 'CheckSystem' by default."
@@ -34,19 +40,22 @@ object CheckCommand "nscp-local" {
 		}
 		"-q" = {
 			value = "$nscp_query$"
+			description = "Run a query with a given name"
 			required = true
 		}
 		"-b" = {
 			set_if = "$nscp_boot$"
+			description = "Boot the client before executing command (similar as running the command from test mode)"
 		}
 		"-a" = {
 			value = "$nscp_arguments$"
 			repeat_key = true
+			description = "List of arguments (arguments gets -- prefixed automatically (--argument foo=bar is the same as setting '--foo bar')"
 		}
 		"--show-all" = {
 			set_if = "$nscp_showall$"
+			description = ""
 		}
-
 	}
 
 	vars.nscp_log_level = "critical"
@@ -63,6 +72,7 @@ object CheckCommand "nscp-local-cpu" {
 		"--time" = {
 			value = "$nscp_cpu_time$"
 			repeat_key = true
+			description = "The time to check"
 		}
 		"--warning" = {
 			value = "load>$nscp_cpu_warning$"
@@ -91,9 +101,11 @@ object CheckCommand "nscp-local-memory" {
 	arguments += {
 		"--type=committed" = {
 			set_if = "$nscp_memory_committed$"
+			description = "Total memory (RAM+PAGE)"
 		}
 		"--type=physical" = {
 			set_if = "$nscp_memory_physical$"
+			description = "Physical memory (RAM)"
 		}
 		"--warning" = {
 			value = "$nscp_memory_op$ $nscp_memory_warning$"
