Add missing options for the definition of the ITL snmp CheckCommand - check_snmp (snmp_offset, snmp_output_delimiter and snmp_perf_oids options)

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1781,6 +1781,18 @@ object CheckCommand "snmp" {
 			set_if = "$snmp_getnext$"
 			description = "Use SNMP GETNEXT instead of SNMP GET"
 		}
+		"--offset" = {
+			value = "$snmp_offset$"
+			description = "Add/substract the specified OFFSET to numeric sensor data"
+		}
+		"-D" = {
+			value = "$snmp_output_delimiter$"
+			description = "Separates output on multiple OID requests"
+		}
+		"-O" = {
+			set_if = "$snmp_perf_oids$"
+			description = "Label performance data with OIDs instead of --label's"
+		}
 	}
 
 	vars.snmp_address = {{
