--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -25,6 +25,14 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_hostname$"
 			description = "the database server's hostname"
 		}
+		"--username" = {
+			value = "$mssql_health_username$"
+			description = "the mssql db user"
+		}
+		"--password" = {
+			value = "$mssql_health_password$"
+			description = "the mssql db user's password"
+		}
 		"--port" = {
 			value = "$mssql_health_port$"
 			description = "the database's port"
@@ -37,13 +45,37 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_currentdb$"
 			description = "the name of a database which is used as the current database for the connection"
 		}
-		"--username" = {
-			value = "$mssql_health_username$"
-			description = "the mssql db user"
+		"--offlineok" = {
+			set_if = "$mssql_health_offlineok$"
+			description = "if offline databases are perfectly ok for you"
 		}
-		"--password" = {
-			value = "$mssql_health_password$"
-			description = "the mssql db user's password"
+		"--nooffline" = {
+			set_if = "$mssql_health_nooffline$"
+			description = "Skip the offline databases"
+		}
+		"--dbthresholds" = {
+			value = "$mssql_health_dbthresholds$"
+			description = "Read thresholds from a database table"
+		}
+		"--notemp" = {
+			set_if = "$mssql_health_notemp$"
+			description = "Ignore temporary databases/tablespaces"
+		}
+		"--commit" = {
+			set_if = "$mssql_health_commit$"
+			description = "turns on autocommit for the dbd::sybase module"
+		}
+		"--method" = {
+			value = "$mssql_health_method$"
+			description = "how the plugin should connect to the database (dbi for using DBD::Sybase (default), sqlrelay for the SQLRelay proxy)"
+		}
+		"--mode" = {
+			value = "$mssql_health_mode$"
+			description = "the mode of the plugin"
+		}
+		"--regexp" = {
+			set_if = "$mssql_health_regexp$"
+			description = "name will be interpreted as a regular expression"
 		}
 		"--warning" = {
 			value = "$mssql_health_warning$"
@@ -53,13 +85,17 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_critical$"
 			description = "the critical range"
 		}
-		"--mode" = {
-			value = "$mssql_health_mode$"
-			description = "the mode of the plugin"
+		"--warningx" = {
+			value = "$mssql_health_warningx$"
+			description = "The extended warning thresholds"
 		}
-		"--method" = {
-			value = "$mssql_health_method$"
-			description = "how the plugin should connect to the database (dbi for using DBD::Sybase (default), sqlrelay for the SQLRelay proxy)"
+		"--criticalx" = {
+			value = "$mssql_health_criticalx$"
+			description = "The extended critical thresholds"
+		}
+		"--units" = {
+			value = "$mssql_health_units$"
+			description = "This is used for a better output of mode=sql and for specifying thresholds for mode=tablespace-free"
 		}
 		"--name" = {
 			value = "$mssql_health_name$"
@@ -69,37 +105,69 @@ object CheckCommand "mssql_health" {
 			value = "$mssql_health_name2$"
 			description = "if name is a sql statement, name2 can be used to appear in the output and the performance data"
 		}
-		"--regexp" = {
-			set_if = "$mssql_health_regexp$"
-			description = "name will be interpreted as a regular expression"
+		"--name3" = {
+			value = "$mssql_health_name3$"
+			description = "The tertiary name of a component"
 		}
-		"--units" = {
-			value = "$mssql_health_units$"
-			description = "This is used for a better output of mode=sql and for specifying thresholds for mode=tablespace-free"
+		"--extra-opts" = {
+			value = "$mssql_health_extraopts$"
+			description = "read command line arguments from an external file"
 		}
-		"--offlineok" = {
-			set_if = "$mssql_health_offlineok$"
-			description = "if offline databases are perfectly ok for you"
+		"--blacklist" = {
+			value = "$mssql_health_blacklist$"
+			description = "Blacklist some (missing/failed) components"
 		}
-		"--commit" = {
-			set_if = "$mssql_health_commit$"
-			description = "turns on autocommit for the dbd::sybase module"
-		}
-		"--notemp" = {
-			set_if = "$mssql_health_notemp$"
-			description = "Ignore temporary databases/tablespaces"
-		}
-		"--nooffline" = {
-			set_if = "$mssql_health_nooffline$"
-			description = "Skip the offline databases"
+		"--mitigation" = {
+			value = "$mssql_health_mitigation$"
+			description = "The parameter allows you to change a critical error to a warning."
 		}
 		"--lookback" = {
 			value = "$mssql_health_lookback$"
 			description = "The amount of time you want to look back when calculating average rates"
 		}
+		"--environment" = {
+			value = "$mssql_health_environment$"
+			description = "Add a variable to the plugin's environment."
+		}
+		"--negate" = {
+			value = "$mssql_health_negate$"
+			description = "Emulate the negate plugin. --negate warning=critical --negate unknown=critical."
+		}
+		"--morphmessage" = {
+			value = "$mssql_health_morphmessage$"
+			description = "Modify the final output message."
+		}
+		"--morphperfdata" = {
+			value = "$mssql_health_morphperfdata$"
+			description = "The parameter allows you to change performance data labels."
+		}
+		"--selectedperfdata" = {
+			value = "$mssql_health_selectedperfdata$"
+			description = "The parameter allows you to limit the list of performance data."
+		}
 		"--report" = {
 			value = "$mssql_health_report$"
 			description = "Report can be used to output only the bad news (short,long,html)"
+		}
+		"--multiline" = {
+			value = "$mssql_health_multiline$"
+			description = "Multiline output."
+		}
+		"--with-mymodules-dyn-dir" = {
+			value = "$mssql_health_withmymodulesdyndir$"
+			description = "Add-on modules for the my-modes will be searched in this directory."
+		}
+		"--statefilesdir" = {
+			value = "$mssql_health_statefilesdir$"
+			description = "An alternate directory where the plugin can save files."
+		}
+		"--isvalidtime" = {
+			value = "$mssql_health_isvalidtime$"
+			description = "Signals the plugin to return OK if now is not a valid check time."
+		}
+		"--timeout" = {
+			value = "$mssql_health_timeout$"
+			description = "Seconds before plugin times out (default: 15)"
 		}
 	}
 
