itl: Add manubulon/check_snmp_env.pl as CheckCommand snmp-env

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -88,6 +88,40 @@ template CheckCommand "snmp-manubulon-command" {
 
 
 /**
+ * snmp env
+ *   Url reference: http://nagios.manubulon.com/snmp_env.html
+ */
+
+object CheckCommand "snmp-env" {
+	import "snmp-manubulon-command"
+
+	command = [ ManubulonPluginDir + "/check_snmp_env.pl" ]
+
+	arguments += {
+		"-T" = {
+			value = "$snmp_env_type$"
+			description = "Environment Type [cisco|nokia|bc|iron|foundry|linux]"
+		}
+		"-F" = {
+			value = "$snmp_env_fan$"
+			description = "Minimum fan rpm value (only needed for 'iron' & 'linux')"
+		}
+		"-c" = {
+			value = "$snmp_env_celsius$"
+			description = "Maximum temp in degrees celsius (only needed for 'iron' & 'linux')"
+		}
+		"-f" = {
+			set_if = "$snmp_perf$"
+			description = "Perfparse compatible output"
+		}
+	}
+
+	vars.snmp_env_type = "cisco"
+	vars.snmp_perf = true
+}
+
+
+/**
  * snmp load
  *   Url reference: http://nagios.manubulon.com/snmp_load.html
  */
