Update negate CheckCommand definition
refs #5427

Signed-off-by: Jean Flach <jean-marcel.flach@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -2781,6 +2781,9 @@ object CheckCommand "negate" {
 		"-c" = {
 			value = "$negate_critical$"
 		}
+		"-u" = {
+			value = "$negate_unknown$"
+		}
 		"-s" = {
 			set_if = "$negate_substitute$"
 			description = "Substitute output text as well. Will only substitute text in CAPITALS"
