Add -d option to check_service

--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -226,6 +226,10 @@ object CheckCommand "service-windows" {
 			required = true
 			description = "Service to check"
 		}
+		"-d" = {
+			set_if = "$service_win_description$"
+			description = "Use service description instead of name"
+		}
 	}
 }
 
