Notification scripts: Make the `-4` parameter optional
Not all hosts may have the `address` attribute set, or just use
`address6` instead.

refs #5474

--- a/etc/icinga2/conf.d/commands.conf
+++ b/etc/icinga2/conf.d/commands.conf
@@ -10,10 +10,7 @@ object NotificationCommand "mail-host-notification" {
   command = [ SysconfDir + "/icinga2/scripts/mail-host-notification.sh" ]
 
   arguments += {
-    "-4" = {
-      required = true
-      value = "$notification_address$"
-    }
+    "-4" = "$notification_address$"
     "-6" = "$notification_address6$"
     "-b" = "$notification_author$"
     "-c" = "$notification_comment$"
@@ -72,10 +69,7 @@ object NotificationCommand "mail-service-notification" {
   command = [ SysconfDir + "/icinga2/scripts/mail-service-notification.sh" ]
 
   arguments += {
-    "-4" = {
-      required = true
-      value = "$notification_address$"
-        }
+    "-4" = "$notification_address$"
     "-6" = "$notification_address6$"
     "-b" = "$notification_author$"
     "-c" = "$notification_comment$"
