--- a/etc/icinga2/features-available/api.conf
+++ b/etc/icinga2/features-available/api.conf
@@ -3,9 +3,9 @@
  */
 
 object ApiListener "api" {
-  cert_path = LocalStateDir + "/lib/icinga2/pki/" + NodeName + ".crt"
-  key_path = LocalStateDir + "/lib/icinga2/pki/" + NodeName + ".key"
-  ca_path = LocalStateDir + "/lib/icinga2/pki/ca.crt"
+  cert_path = LocalStateDir + "/lib/icinga2/certs/" + NodeName + ".crt"
+  key_path = LocalStateDir + "/lib/icinga2/certs/" + NodeName + ".key"
+  ca_path = LocalStateDir + "/lib/icinga2/certs/ca.crt"
 
   ticket_salt = TicketSalt
 }
