check_esxi_hardware.py with new --no-lcd parameter

--- a/itl/plugins-contrib.d/virtualization.conf
+++ b/itl/plugins-contrib.d/virtualization.conf
@@ -73,6 +73,10 @@ object CheckCommand "esxi_hardware" {
 			set_if = "$esxi_hardware_nofan$"
 			description = "don't collect fan performance data"
 		}
+		"--no-lcd" = {
+			set_if = "$esxi_hardware_nolcd$"
+			description = "don't collect lcd/display status data"
+		}
 	}
 
 	vars.esxi_hardware_host = "$address$"
@@ -83,5 +87,6 @@ object CheckCommand "esxi_hardware" {
 	vars.esxi_hardware_nocurrent = false
 	vars.esxi_hardware_notemp = false
 	vars.esxi_hardware_nofan = false
+	vars.esxi_hardware_nolcd = false
 }
 
