Plugin Command Enhacements to support SNMP v2 for network interface monitoring, and better support for http virtual hosts

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -253,6 +253,10 @@ object CheckCommand "snmp-interface" {
 			set_if = "$snmp_interface_64bit$"
 			description = "Use 64 bits counters instead of the standard counters when checking bandwidth & performance data for interface >= 1Gbps"
 		}
+                "-2" = {
+                        set_if = "$snmp_interface_v2$"
+                        description = "Use SNMP version 2"
+                }
 		"-e" = {
 			set_if = "$snmp_interface_errors$"
 			description = "Add error & discard to Perfparse output"
@@ -292,6 +296,7 @@ object CheckCommand "snmp-interface" {
 	vars.snmp_interface_kbits = true
 	vars.snmp_interface_megabytes = true
 	vars.snmp_interface_64bit = false
+        vars.snmp_interface_v2 = false
 	vars.snmp_interface_errors = true
 	vars.snmp_interface_noregexp = false
 	vars.snmp_interface_delta = 300
