ITL: Re-Add ssl_sni attribute for check_tcp

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -340,6 +340,10 @@ object CheckCommand "ssl" {
 				}
 			}
 		}}
+		"-N" = {
+			value = "$ssl_sni$"
+			description = "Enable SSL/TLS hostname extension support (SNI)"
+		}
 	}
 
 	vars.ssl_address = "$check_address$"
