--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -18,6 +18,8 @@
  ******************************************************************************/
 
 object CheckCommand "mssql_health" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_mssql_health" ]
 
 	arguments = {
@@ -177,6 +179,7 @@ object CheckCommand "mssql_health" {
 	vars.mssql_health_notemp = false
 	vars.mssql_health_nooffline = false
 	vars.mssql_health_report = "short"
+	vars.mssql_health_hostname = "$check_address$"
 }
 
 object CheckCommand "mysql_health" {
@@ -335,6 +338,8 @@ object CheckCommand "mysql_health" {
 }
 
 object CheckCommand "db2_health" {
+	import "ipv4-or-ipv6"
+	
         command = [ PluginContribDir + "/check_db2_health" ]
 
         arguments = {
@@ -428,6 +433,8 @@ object CheckCommand "db2_health" {
 }
 
 object CheckCommand "oracle_health" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_oracle_health" ]
 
 	arguments = {
@@ -604,6 +611,8 @@ object CheckCommand "postgres" {
 }
 
 object CheckCommand "mongodb" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_mongodb.py" ]
 
 	arguments = {
@@ -680,9 +689,12 @@ object CheckCommand "mongodb" {
 
 	vars.mongodb_perfdata = true
 	vars.mongodb_action = "connections"
+	vars.mongodb_address = "$check_address$"
 }
 
 object CheckCommand "elasticsearch" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_elasticsearch" ]
 
 	arguments = {
@@ -714,9 +726,12 @@ object CheckCommand "elasticsearch" {
 	}
 
 	vars.elasticsearch_yellowcritical = false
+	vars.elasticsearch_host = "$check_address$"
 }
 
 object CheckCommand "redis" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_redis.pl" ]
 
 	arguments = {
@@ -805,7 +820,7 @@ object CheckCommand "redis" {
 		}
 	}
 
-	vars.redis_hostname = "127.0.0.1"
+	vars.redis_hostname = "$check_address$"
 	vars.redis_perfparse = false
 	vars.redis_prev_perfdata = false
 }
