update address check for multiple commands
the check commands shouldn't be directly tied to localhost (redis/mongodb) by default.
change from "$check_address$" to "$address$" default host
renamed check_mongodb.py to check_mongodb because the nagios-plugins-contrib contains the check script without the .py extension

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -177,6 +177,7 @@ object CheckCommand "mssql_health" {
 	vars.mssql_health_notemp = false
 	vars.mssql_health_nooffline = false
 	vars.mssql_health_report = "short"
+	vars.mssql_health_hostname = "$address$"
 }
 
 object CheckCommand "mysql_health" {
@@ -331,7 +332,7 @@ object CheckCommand "mysql_health" {
 		}
 	}
 
-	vars.mysql_health_hostname = "$check_address$"
+	vars.mysql_health_hostname = "$address$"
 }
 
 object CheckCommand "db2_health" {
@@ -420,7 +421,7 @@ object CheckCommand "db2_health" {
         }
 
         vars.db2_health_regexp = false
-        vars.db2_health_hostname = "$check_address$"
+        vars.db2_health_hostname = "$address$"
         vars.db2_health_report = "short"
 
         vars.db2_health_env_db2_home = "/opt/ibm/db2/V10.5"
@@ -597,14 +598,14 @@ object CheckCommand "postgres" {
 		}
 	}
 
-	vars.postgres_host = "$check_address$"
+	vars.postgres_host = "$address$"
 	vars.postgres_standby = false
 	vars.postgres_production = false
 	vars.postgres_unixsocket = false
 }
 
 object CheckCommand "mongodb" {
-	command = [ PluginContribDir + "/check_mongodb.py" ]
+	command = [ PluginContribDir + "/check_mongodb" ]
 
 	arguments = {
 		"-H" = {
@@ -680,6 +681,7 @@ object CheckCommand "mongodb" {
 
 	vars.mongodb_perfdata = true
 	vars.mongodb_action = "connections"
+	vars.mongodb_address = "$address$"
 }
 
 object CheckCommand "elasticsearch" {
@@ -714,6 +716,7 @@ object CheckCommand "elasticsearch" {
 	}
 
 	vars.elasticsearch_yellowcritical = false
+	vars.elasticsearch_host = "$address$"
 }
 
 object CheckCommand "redis" {
@@ -805,7 +808,7 @@ object CheckCommand "redis" {
 		}
 	}
 
-	vars.redis_hostname = "127.0.0.1"
+	vars.redis_hostname = "$address$"
 	vars.redis_perfparse = false
 	vars.redis_prev_perfdata = false
 }
