add support for ping4 (or ping6) template usage
1. modified $address$ back to $check_address$ as suggested 
    - the problem for my mongodb check was caused by the fact that I was using the ping4 CheckCommand instead of the ping command which imports "ipv4-or-ipv6"
2. added import "ipv4-or-ipv6" in all defined CheckCommands in this file to be compatible with the ping4 and ping6 CheckCommands
3. reverted the naming for check_mongodb to check_mongodb.py for backward compatibility as you suggested - will try fix the nagios-plugins-contrib package to contain the suggested link

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -18,6 +18,8 @@
  ******************************************************************************/
 
 object CheckCommand "mssql_health" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_mssql_health" ]
 
 	arguments = {
@@ -177,7 +179,7 @@ object CheckCommand "mssql_health" {
 	vars.mssql_health_notemp = false
 	vars.mssql_health_nooffline = false
 	vars.mssql_health_report = "short"
-	vars.mssql_health_hostname = "$address$"
+	vars.mssql_health_hostname = "$check_address$"
 }
 
 object CheckCommand "mysql_health" {
@@ -332,10 +334,12 @@ object CheckCommand "mysql_health" {
 		}
 	}
 
-	vars.mysql_health_hostname = "$address$"
+	vars.mysql_health_hostname = "$check_address$"
 }
 
 object CheckCommand "db2_health" {
+	import "ipv4-or-ipv6"
+	
         command = [ PluginContribDir + "/check_db2_health" ]
 
         arguments = {
@@ -421,7 +425,7 @@ object CheckCommand "db2_health" {
         }
 
         vars.db2_health_regexp = false
-        vars.db2_health_hostname = "$address$"
+        vars.db2_health_hostname = "$check_address$"
         vars.db2_health_report = "short"
 
         vars.db2_health_env_db2_home = "/opt/ibm/db2/V10.5"
@@ -429,6 +433,8 @@ object CheckCommand "db2_health" {
 }
 
 object CheckCommand "oracle_health" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_oracle_health" ]
 
 	arguments = {
@@ -598,14 +604,16 @@ object CheckCommand "postgres" {
 		}
 	}
 
-	vars.postgres_host = "$address$"
+	vars.postgres_host = "$check_address$"
 	vars.postgres_standby = false
 	vars.postgres_production = false
 	vars.postgres_unixsocket = false
 }
 
 object CheckCommand "mongodb" {
-	command = [ PluginContribDir + "/check_mongodb" ]
+	import "ipv4-or-ipv6"
+	
+	command = [ PluginContribDir + "/check_mongodb.py" ]
 
 	arguments = {
 		"-H" = {
@@ -681,10 +689,12 @@ object CheckCommand "mongodb" {
 
 	vars.mongodb_perfdata = true
 	vars.mongodb_action = "connections"
-	vars.mongodb_address = "$address$"
+	vars.mongodb_address = "$check_address$"
 }
 
 object CheckCommand "elasticsearch" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_elasticsearch" ]
 
 	arguments = {
@@ -716,10 +726,12 @@ object CheckCommand "elasticsearch" {
 	}
 
 	vars.elasticsearch_yellowcritical = false
-	vars.elasticsearch_host = "$address$"
+	vars.elasticsearch_host = "$check_address$"
 }
 
 object CheckCommand "redis" {
+	import "ipv4-or-ipv6"
+	
 	command = [ PluginContribDir + "/check_redis.pl" ]
 
 	arguments = {
@@ -808,7 +820,7 @@ object CheckCommand "redis" {
 		}
 	}
 
-	vars.redis_hostname = "$address$"
+	vars.redis_hostname = "$check_address$"
 	vars.redis_perfparse = false
 	vars.redis_prev_perfdata = false
 }
