Add support for check_address as default in database CheckCommand objects
1. set the default hostname to the "$check_address$" for multiple CheckCommands
2. add support for  "$check_address$" for ping4 and ping6 commands which don't import the ipv4-or-ipv6 template

This commit changes the default address for redis, mongodb and elasticsearch to
use check_address instead of localhost. Users who might not have set this explicitly
in their services should adopt this.

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>
Signed-off-by: Gunnar Beutner <gunnar.beutner@icinga.com>

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -18,6 +18,8 @@
  ******************************************************************************/
 
 object CheckCommand "mssql_health" {
+	import "ipv4-or-ipv6"
+
 	command = [ PluginContribDir + "/check_mssql_health" ]
 
 	arguments = {
@@ -335,6 +337,8 @@ object CheckCommand "mysql_health" {
 }
 
 object CheckCommand "db2_health" {
+	import "ipv4-or-ipv6"
+
         command = [ PluginContribDir + "/check_db2_health" ]
 
         arguments = {
@@ -428,6 +432,8 @@ object CheckCommand "db2_health" {
 }
 
 object CheckCommand "oracle_health" {
+	import "ipv4-or-ipv6"
+
 	command = [ PluginContribDir + "/check_oracle_health" ]
 
 	arguments = {
@@ -604,6 +610,8 @@ object CheckCommand "postgres" {
 }
 
 object CheckCommand "mongodb" {
+	import "ipv4-or-ipv6"
+
 	command = [ PluginContribDir + "/check_mongodb.py" ]
 
 	arguments = {
@@ -678,11 +686,14 @@ object CheckCommand "mongodb" {
 		}
 	}
 
+	vars.mongodb_address = "$check_address$"
 	vars.mongodb_perfdata = true
 	vars.mongodb_action = "connections"
 }
 
 object CheckCommand "elasticsearch" {
+	import "ipv4-or-ipv6"
+
 	command = [ PluginContribDir + "/check_elasticsearch" ]
 
 	arguments = {
@@ -713,10 +724,13 @@ object CheckCommand "elasticsearch" {
 		}
 	}
 
+	vars.elasticsearch_host = "$check_address$"
 	vars.elasticsearch_yellowcritical = false
 }
 
 object CheckCommand "redis" {
+	import "ipv4-or-ipv6"
+
 	command = [ PluginContribDir + "/check_redis.pl" ]
 
 	arguments = {
@@ -805,7 +819,7 @@ object CheckCommand "redis" {
 		}
 	}
 
-	vars.redis_hostname = "127.0.0.1"
+	vars.redis_hostname = "$check_address$"
 	vars.redis_perfparse = false
 	vars.redis_prev_perfdata = false
 }
