ITL: Support weathermap data in snmp_interface CheckCommand
See https://github.com/dnsmichi/manubulon-snmp/pull/26 for related commit.

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -283,6 +283,10 @@ object CheckCommand "snmp-interface" {
 			set_if = "$snmp_perf$"
 			description = "Perfparse compatible output (no output when interface is down)"
 		}
+		"-W" = {
+			set_if = "$snmp_interface_weathermap$"
+			description = "Include 'weathermap' data for NagVis in performance data"
+		}
 	}
 
 	vars.snmp_interface = "eth0"
