Allow to disable thresholds for ipmi CheckCommand
fixes #5579

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -75,6 +75,10 @@ object CheckCommand "ipmi-sensor" {
 			set_if = "$ipmi_no_sel_checking$"
 			description = "Turn off system event log checking via ipmi-sel"
 		}
+		"--nothresholds" = {
+			set_if = "$ipmi_no_thresholds$"
+			description = "Turn off performance data thresholds from output-sensor-thresholds"
+		}
 		"-D" = {
 			value = "$ipmi_protocol_lan_version$"
 			description = "Change the protocol LAN version (default: LAN_2_0)"
