--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -349,3 +349,41 @@ object CheckCommand "snmp-process" {
 	vars.snmp_process_cpu_usage = false
 	vars.snmp_process_cpu_threshold = "0,0"
 }
+
+
+/**
+ * snmp win
+ *   Url reference: http://nagios.manubulon.com/snmp_windows.html
+ */
+
+object CheckCommand "snmp-win" {
+        import "snmp-manubulon-command"
+
+        command = [ ManubulonPluginDir + "/check_snmp_win.pl" ]
+
+        arguments += {
+                "-n" = {
+                        value = "$snmp_service_name$"
+                        description = "Comma separated names of services (perl regular expressions can be used for every one). By default, it is not case sensitive."
+                }
+                "-N" = {
+                        value = "$snmp_service_count$"
+                        description = "Compare matching services with <n> instead of the number of names provided."
+                }
+                "-T" = {
+                        set_if = "$snmp_check_type$"
+                        description = "service (default) checks service"
+                }
+                "-s" = {
+                        set_if = "$snmp_service_show_all$"
+                        description = "Show all services in the output, instead of only the non-active ones."
+                }
+                "-r" = {
+                        set_if = "$snmp_no_regex$"
+                        description = "Do not use regexp to match NAME in service description."
+                }
+        }
+
+        vars.snmp_service_name = ".*"
+        vars.snmp_perf = true
+}
