add command parameter check_snmp_mem

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -72,6 +72,14 @@ template CheckCommand "snmp-manubulon-command" {
 			value = "$snmp_timeout$"
 			description = "Timeout for SNMP in seconds (Default: 5)"
 		}
+        "-m" = {
+            value = "$snmp_memcached$"
+            description = "Include cached memory in used memory"
+        }
+        "-b" = {
+            value = "$snmp_membuffer$"
+            description = "Exclude buffered memory in used memory"
+        }
 	}
 
 	vars.snmp_address = "$check_address$"
