add command parameter check_snmp_mem

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -91,6 +91,8 @@ template CheckCommand "snmp-manubulon-command" {
 	vars.snmp_v3_use_privpass = false
 	vars.snmp_v3_use_authprotocol = false
 	vars.snmp_authprotocol = "md5,des"
+    vars.snmp_memcached = false
+    vars.snmp_membuffer = false
 	vars.snmp_timeout = "5"
 }
 
