Enhance documentation with more details on value types for object attributes
Main focus: Object attributes and their value types. Originates from the
API Event Streams patch to document their value types. Now applied to
the entire configuration objects chapter.

The API chapter and their value types has been changed to capitalized
type identifiers.

Value types are now explicitly told about inside monitoring basics. This
has been adopted into the Icinga 2 training material a long time ago
and finds its way into the docs too.

The CheckResult and PerfdataValue value types have been moved into the
advanced topics chapter. mkdocs doesn't like multiple `#` headings in one file
and did just hide it.

Also moved the Influxdb details into the features documentation where it
belongs.

Many small references and URLs to other chapters added.
E.g. dedicated chapters for object accessor examples, to better link against
time dependent thresholds.

Can serve as patch basis and reference for ITL documentation where the
value types are missing too.

This commit also fixes the non-requirement of "legacy-timeperiod" which
also is a default template import since 2.6.

This also fixes the state mapping issue.

fixes #4015

--- a/etc/icinga2/conf.d/timeperiods.conf
+++ b/etc/icinga2/conf.d/timeperiods.conf
@@ -1,13 +1,9 @@
 /**
- * Sample timeperiods for Icinga 2 requiring
- * 'legacy-timeperiod' template from the Icinga
- * Template Library (ITL).
+ * Sample timeperiods for Icinga 2.
  * Check the documentation for details.
  */
 
 object TimePeriod "24x7" {
-  import "legacy-timeperiod"
-
   display_name = "Icinga 2 24x7 TimePeriod"
   ranges = {
     "monday" 	= "00:00-24:00"
@@ -21,8 +17,6 @@ object TimePeriod "24x7" {
 }
 
 object TimePeriod "9to5" {
-  import "legacy-timeperiod"
-
   display_name = "Icinga 2 9to5 TimePeriod"
   ranges = {
     "monday" 	= "09:00-17:00"
@@ -34,8 +28,6 @@ object TimePeriod "9to5" {
 }
 
 object TimePeriod "never" {
-  import "legacy-timeperiod"
-
   display_name = "Icinga 2 never TimePeriod"
   ranges = {
   }
