add itl snmp-service
add itl snmp service for manubulon plugin check_snmp_win.pl

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -353,3 +353,35 @@ object CheckCommand "snmp-process" {
 	vars.snmp_process_cpu_usage = false
 	vars.snmp_process_cpu_threshold = "0,0"
 }
+
+/**
+ * snmp service
+ *   Url reference: http://nagios.manubulon.com/snmp_windows.html
+ */
+
+object CheckCommand "snmp-service" {
+	import "snmp-manubulon-command"
+
+	command = [ ManubulonPluginDir + "/check_snmp_win.pl" ]
+
+	arguments += {
+		"-n" = {
+			value = "$snmp_service_name$"
+			description = "Comma separated names of services (perl regular expressions can be used for every one). By default, it is not case sensitive. eg. ^dns$"
+		}
+		"-N" = {
+			value = "$snmp_service_count$"
+			description = "Compare matching services with <n> instead of the number of names provided."
+		}
+		"-s" = {
+			set_if = "$snmp_service_showall$"
+			description = "Show all services in the output, instead of only the non-active ones."
+		}
+		"-r" = {
+			set_if = "$snmp_service_noregexp$"
+			description = "Do not use regexp to match NAME in service description."
+		}
+	}
+	
+	vars.snmp_service_name = ".*"
+}
