ITL: Add "-q" parameter to ntp_peer CheckCommand
Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -1291,6 +1291,10 @@ object CheckCommand "ntp_peer" {
 			value = "$ntp_port$"
 			description = "Port number (default: 123)"
 		}
+		"-q" = {
+			set_if = "$ntp_quiet$"
+			description = "Returns UNKNOWN instead of CRITICAL or WARNING if server isn't synchronized"
+		}
 		"-w" = {
 			value = "$ntp_warning$"
 			description = "Offset to result in warning status (seconds)"
