Implement support for migrating certificates to /var/lib/icinga2/certs
This commit includes documentation too.

Signed-off-by: Michael Friedrich <michael.friedrich@icinga.com>

--- a/etc/icinga2/features-available/api.conf
+++ b/etc/icinga2/features-available/api.conf
@@ -3,9 +3,8 @@
  */
 
 object ApiListener "api" {
-  cert_path = LocalStateDir + "/lib/icinga2/certs/" + NodeName + ".crt"
-  key_path = LocalStateDir + "/lib/icinga2/certs/" + NodeName + ".key"
-  ca_path = LocalStateDir + "/lib/icinga2/certs/ca.crt"
+  //accept_config = false
+  //accept_commands = false
 
   ticket_salt = TicketSalt
 }
